### Added

### Changed
- Removed the zero-bin delta mass correction.

### Fixed
- Fixed support for mass offset for MSFragger